--- a/app/src/main/res/layout/activity_audio_test.xml
+++ b/app/src/main/res/layout/activity_audio_test.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-<RelativeLayout
+<RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -46,10 +45,10 @@
             android:text="@string/stream_voice" />
 
         <RadioButton
-            android:id="@+id/radio_ring"
+            android:id="@+id/radio_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/stream_ring" />
+            android:text="@string/stream_music" />
     </RadioGroup>
 
     <Button
@@ -91,13 +90,86 @@
         android:onClick="onEarpieceClick"
         android:text="@string/route_earpiece" />
 
+    <CheckBox
+        android:id="@+id/checkBox_16k"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button_earpiece"
+        android:layout_toRightOf="@+id/button_earpiece"
+        android:checked="true"
+        android:text="@string/use_16k" />
+
+    <Button
+        android:id="@+id/button_start_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button_speaker"
+        android:layout_below="@+id/button_speaker"
+        android:onClick="onStartBtClick"
+        android:text="@string/route_start_bt" />
+
     <Button
         android:id="@+id/button_speaker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button_earpiece"
+        android:layout_toLeftOf="@+id/checkBox_16k"
         android:onClick="onSpeakerClick"
         android:text="@string/route_speaker" />
+
+    <Button
+        android:id="@+id/button_bt_route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button_start_bt"
+        android:layout_below="@+id/button_start_bt"
+        android:onClick="onBtScoClick"
+        android:text="@string/route_sco" />
+
+    <Button
+        android:id="@+id/button_focus_gain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button_bt_route"
+        android:layout_below="@+id/button_bt_route"
+        android:onClick="onAudioFocusGainClick"
+        android:text="@string/audio_focus_gain" />
+
+    <Button
+        android:id="@+id/button_stop_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_speaker"
+        android:layout_toRightOf="@+id/button_start_bt"
+        android:onClick="onStopBtClick"
+        android:text="@string/route_stop_bt" />
+
+    <Button
+        android:id="@+id/button_bt_sco_off"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_start_bt"
+        android:layout_toRightOf="@+id/button_speaker"
+        android:onClick="onBtScoOffClick"
+        android:text="@string/route_sco_off" />
+
+    <Button
+        android:id="@+id/button_focus_lose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/button_focus_gain"
+        android:layout_below="@+id/button_bt_route"
+        android:onClick="onAudioFocusLoseClick"
+        android:text="@string/audio_focus_lose" />
+
+    <Button
+        android:id="@+id/button_speaker_off"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_earpiece"
+        android:layout_toRightOf="@+id/button_earpiece"
+        android:onClick="onSpeakerOffClick"
+        android:text="@string/route_speaker_off" />
 
     <TextView
         android:id="@+id/text_route"
@@ -132,67 +204,5 @@
         android:layout_below="@+id/btn_play"
         android:layout_toRightOf="@+id/btn_play" />
 
-    <Button
-        android:id="@+id/button_speaker_off"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button_earpiece"
-        android:layout_below="@+id/button_speaker"
-        android:onClick="onSpeakerOffClick"
-        android:text="@string/route_speaker_off" />
-
-    <Button
-        android:id="@+id/button_bt_sco_off"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button_bt_route"
-        android:layout_centerHorizontal="true"
-        android:onClick="onBtScoOffClick"
-        android:text="@string/route_sco_off" />
-
-    <Button
-        android:id="@+id/button_stop_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button_bt_sco_off"
-        android:layout_alignBottom="@+id/button_bt_sco_off"
-        android:layout_toRightOf="@+id/button_bt_sco_off"
-        android:onClick="onStopBtClick"
-        android:text="@string/route_stop_bt" />
-
-    <Button
-        android:id="@+id/button_start_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/button_stop_bt"
-        android:layout_below="@+id/button_earpiece"
-        android:onClick="onStartBtClick"
-        android:text="@string/route_start_bt" />
-
-    <Button
-        android:id="@+id/button_bt_route"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_speaker_off"
-        android:layout_toRightOf="@+id/button_earpiece"
-        android:onClick="onBtScoClick"
-        android:text="@string/route_sco" />
-
-    
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignLeft="@+id/button_speaker_off"
-        android:layout_below="@+id/button_speaker_off" >
-
-        <TextView
-            android:id="@+id/textView_log"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="-" />
-    </ScrollView>
-    
 </RelativeLayout>
-
 </ScrollView>
